--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,8 @@ chardet==2.3.0
 docx2txt==0.6
 EbookLib==0.15
 lxml==4.2.1
+nltk==3.2.5
+numpy==1.14.3
 Pillow==5.1.0
 pocketsphinx==0.1.3
 python-pptx==0.6.5
